# sample-apj-sup-sa

./: README.md
agentic-workloads/agentic-analytics/: .gitignore  (+4 more)
agentic-workloads/ambient-voice-qa/server/: .env.example  bot.py  pcc-deploy.toml  pyproject.toml
agentic-workloads/bedrock-service-tier-benchmark/: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
agentic-workloads/bedrock-service-tier-benchmark/bedrock_bench/: __init__.py  __main__.py  auth.py  benchmark.py  cells.py  config.py  discovery.py  endpoints.py  html_report.py  metrics.py  models.json  payloads.py  preflight.py  registry.py  report.py  scheduler.py
agentic-workloads/bedrock-service-tier-benchmark/docs/sample-report/: report.html  report.md  summary.json
agentic-workloads/bedrock-service-tier-benchmark/tests/: test_cells.py  test_config.py  test_discovery_naming.py  test_html_report.py  test_metrics.py  test_report.py  test_scheduler.py
agentic-workloads/virtual-interview-coach-using-deepgram/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
agentic-workloads/virtual-interview-coach-using-deepgram/backend/src/: __init__.py  audio_playback.py  audio_store.py  auth_cognito.py  config.py  db.py  jd_scrape.py  main.py  observability.py  queue.py  resume_parse.py  resume_store.py  verdict.py  voice_token.py
agentic-workloads/virtual-interview-coach-using-deepgram/backend/src/api/: consent.py  guidance.py  job.py  resume.py  sessions.py
agentic-workloads/virtual-interview-coach-using-deepgram/backend/src/prep/: __init__.py  blueprint.py  jit_generate.py  retrieval.py
agentic-workloads/virtual-interview-coach-using-deepgram/backend/tests/: conftest.py  test_bank_generate_variants.py  test_bank_review.py  test_bank_screen.py  test_consent_revoke.py  test_delete_fanout.py  test_generative_mode.py  test_guidance_api.py  test_jd_scrape.py  test_jit_generate.py  test_no_score.py  test_observability.py  test_plan_composition.py  test_privacy_audit.py  test_recordings_api.py  test_report_api.py  test_role_classifier.py  test_session_authz.py  test_session_prep.py  test_sessions_list.py  test_voice_token_secret.py
agentic-workloads/virtual-interview-coach-using-deepgram/voice-worker/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-lock.txt  requirements.txt
agentic-workloads/virtual-interview-coach-using-deepgram/voice-worker/harness/: __init__.py  aggregate.py  export_transcript.py  grounding_eval.py  loop_e2e.py  loop_e2e_dtx.py  pipecat_loop.py  run_session.py  tts_deepgram.py
agentic-workloads/virtual-interview-coach-using-deepgram/voice-worker/src/: __init__.py  audio_record.py  blueprint.py  chunking.py  config.py  db_migrate.py  logging_setup.py  metrics.py  persistence.py  pipecat_pipeline.py  prep_handoff.py  server.py  turn_start_grace.py
agentic-workloads/virtual-interview-coach-using-deepgram/voice-worker/src/processors/: __init__.py  deadline.py  interview_director.py  latency_observer.py  lead_clause.py  persistence_writer.py  recording.py  turn_gate.py
agentic-workloads/virtual-interview-coach-using-deepgram/voice-worker/tests/: conftest.py  test_aggregate.py  test_audio_record.py  test_bedrock_messages.py  test_chunking.py  test_interview_director.py  test_latency_persistence.py  test_persistence_writer.py  test_pipecat_adapter.py  test_pipeline_wrapup.py  test_processors.py  test_session_summary.py  test_summary_end_reason.py  test_turn_start_grace.py
agentic-workloads/voice-ai-shopping-assistant/agentcore-pipecat/: .gitignore  README.md  pyproject.toml
agentic-workloads/voice-ai-shopping-assistant/agentcore-pipecat/agent/: .dockerignore  daily_agentcore_prep.py  env.example  gateway_client.py  memory.py  pipecat-agent.py  requirements.txt
agentic-workloads/voice-ai-shopping-assistant/agentcore-pipecat/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
agentic-workloads/voice-ai-shopping-assistant/agentcore-pipecat/lambda/: deploy.sh  handler.py
agentic-workloads/voice-ai-shopping-assistant/agentcore-pipecat/scripts/: cleanup-vpc.sh  configure.sh  destroy.sh  launch.sh  setup-iam-role.sh  setup-memory.sh  setup-vpc.sh
ai-coding-assistants/voice-pair-debugger/: .env.example  .gitignore  README.md  architecture.md  bot.py  bugs.md  pyproject.toml
ai-coding-assistants/voice-pair-debugger/sample-app/: .gitignore  .terraform.lock.hcl  apigateway.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  variables.tf
ai-coding-assistants/voice-pair-debugger/sample-app/lambda/: create_user.mjs  delete_user.mjs  get_stats.mjs  get_user.mjs  get_users.mjs
ai-coding-assistants/voice-pair-debugger/voice/: config.py  pipeline.py  prompt.md
ai-coding-assistants/voice-pair-debugger/voice/tools/: __init__.py  cloudwatch.py  lambda_tools.py  local_files.py  xray.py
ai-infra/llm-inference/batch/: .gitignore  README.md  pyproject.toml
ai-infra/llm-inference/batch/notebooks/: gemma_4_31b_batch.ipynb  gpt_oss_20b_batch.ipynb  llama_4_scout_17b_batch.ipynb  medgemma_27b_batch.ipynb  mistral_small_3_2_24b_batch.ipynb  qwen3_30b_a3b_batch.ipynb  qwen3_8b_batch.ipynb  qwen3_coder_next_batch.ipynb
ai-infra/llm-inference/batch/scripts/: build_and_push.sh  build_notebook.py  setup_env.sh  smoke_test.py  start_jupyter.sh
ai-infra/llm-inference/batch/tests/: test_cfn.py  test_data_models.py  test_deploy.py  test_instance_resources.py  test_models_registry.py  test_notebooks.py  test_run_sh_quoting.py  test_runtime.py  test_s3_layout.py  test_s3_session_creds.py  test_secrets.py  test_submit.py  test_waiter.py
ai-infra/llm-inference/benchmark/: .gitignore  README.md  pyproject.toml
ai-infra/llm-inference/benchmark/models/: __init__.py
ai-infra/llm-inference/benchmark/scripts/: build_notebook.py  setup_env.sh  smoke_test.py  start_jupyter.sh
ai-infra/llm-inference/benchmark/tests/: test_aws_sources.py  test_capacity_strategies.py  test_catalog_loader.py  test_data_models.py  test_models_registry.py  test_notebooks.py  test_resource_tags.py  test_user_data.py
(+647 files in other folders)
