[project]
name = "voice"
version = "0.1.0"
description = "Voice pair debugger for AWS applications"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[deepgram,aws,runner,webrtc]>=1.0.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice"]
