[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-batch-deploy"
version = "0.1.0"
description = "Deploy open-source LLMs to AWS Batch for high-throughput batch inference."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "AWS Solutions" }]
license = { text = "MIT-0" }

dependencies = [
  "boto3>=1.34",
  "botocore>=1.34",
  "pydantic>=2.7",
  "httpx>=0.27",
  "aioboto3>=13.0",
  "pandas>=2.1",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "moto[cloudformation,batch,iam,s3,ecr]>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]
notebook = [
  "jupyterlab>=4.0",
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
]
runtime = [
  # These are what the Batch container needs at RUN time (Dockerfile installs).
  # Intentionally NOT in the base dependencies so local dev doesn't pull vLLM.
  "vllm>=0.6.0",
]

[project.scripts]
llm-batch-deploy = "llm_batch_deploy.deployer.deploy:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_batch_deploy*"]

[tool.setuptools.package-data]
"llm_batch_deploy" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:botocore.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
