[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-ec2-bench"
version = "0.1.0"
description = "Deploy open-source LLMs to EC2 with vLLM and benchmark them with LLMeter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT-0" }
authors = [{ name = "AWS Solutions" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "tenacity>=9.0",
    "requests>=2.32",
    "jmespath>=1.0",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "llmeter>=0.1.11",
    "openai>=1.50",
    "plotly>=5.24",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "huggingface_hub>=0.26",
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vllm_ec2_bench" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
